@@ -1,32 +1,34 @@
 package com.momo.miniapp.service;
 
 import com.momo.miniapp.dto.CardDTO;
-import com.momo.miniapp.exception.ResourceNotFoundException;
 import com.momo.miniapp.model.Card;
 import com.momo.miniapp.model.User;
 import com.momo.miniapp.repository.CardRepository;
 import com.momo.miniapp.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class CardService {
 
     private final CardRepository cardRepository;
     private final UserRepository userRepository;
 
-    public List<CardDTO.Response> getCardsForUser(Long userId) {
+    public List<CardDTO.Response> getCardsForUser(String userId) {
         return cardRepository.findByUserId(userId).stream()
                 .map(CardDTO.Response::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public CardDTO.Response addCard(CardDTO.Request request) {
         User user = userRepository.findById(request.userId())
-                .orElseThrow(() -> new ResourceNotFoundException("User not found: " + request.userId()));
+                .orElseThrow(() -> new RuntimeException("User not found"));
 
         String fullNumber = request.fullCardNumber();
         String lastFour = fullNumber.substring(fullNumber.length() - 4);
@@ -39,16 +41,11 @@ public class CardService {
         card.setExpiryYear(request.expiryYear());
         card.setBrand(request.brand());
 
-        boolean isFirstCard = cardRepository.findByUserId(request.userId()).isEmpty();
-        card.setDefault(isFirstCard);
-
-        return CardDTO.Response.fromEntity(cardRepository.save(card));
+        Card saved = cardRepository.save(card);
+        return CardDTO.Response.fromEntity(saved);
     }
 
     public void deleteCard(Long cardId) {
-        if (!cardRepository.existsById(cardId)) {
-            throw new ResourceNotFoundException("Card not found: " + cardId);
-        }
         cardRepository.deleteById(cardId);
     }
 }
